infrastructure/blocky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky
  namespace: blocky
spec:
  ingressClassName: traefik
  rules:
    - host: dns.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blocky
                port:
                  name: http
    - host: doh.${DOMAIN}
      http:
        paths:
          - path: /dns-query
            pathType: Prefix
            backend:
              service:
                name: blocky
                port:
                  name: http
